tests/paczka1/fuzzy1/41412233.err
Error in line 2: S309 S654 50,1
Error in line 1: fWIuYUiJ S63 59,1
Error in line 4: I8wnSyJ S309 90,6
Error in line 31: GeELOd Sb3 123,7
Error in line 26: GeELOd S63 48,9
Error in line 38: GeELOd S654 76,3
